@@ -10,9 +10,9 @@ interface=wlan0
 # included in a bridge. This parameter is not used with Host AP driver.
 #bridge=br0
 
-# Driver interface type (hostap/wired/madwifi/prism54/test/nl80211/bsd);
+# Driver interface type (hostap/wired/madwifi/prism54/test/none/nl80211/bsd);
 # default: hostap)
-# Use driver=test if building hostapd as a standalone RADIUS server that does
+# Use driver=none if building hostapd as a standalone RADIUS server that does
 # not control any wireless/wired driver.
 # driver=hostap
 
